{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 53,
  "lineage": "37468787-a925-0293-f6a8-43408784d146",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "kc-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5b2bab85b1d59d8",
            "arn": "arn:aws:ec2:eu-west-1:533267206237:elastic-ip/eipalloc-0a5b2bab85b1d59d8",
            "association_id": "eipassoc-0bd54318975ec568e",
            "domain": "vpc",
            "id": "eipalloc-0a5b2bab85b1d59d8",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0eb90f235f8ea7650",
            "private_dns": "ip-10-0-1-185.eu-west-1.compute.internal",
            "private_ip": "10.0.1.185",
            "public_dns": "ec2-54-217-178-227.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.217.178.227",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dbserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c38b837cd80f13bb",
            "arn": "arn:aws:ec2:eu-west-1:533267206237:instance/i-0442a3e173ce65154",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0442a3e173ce65154",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kc-terraform-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f24fd2ab5f811deb",
            "private_dns": "ip-10-0-2-32.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fd6708a4254e82b8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-007a43b1c99fcf62d",
            "tags": {
              "Name": "dbserver"
            },
            "tags_all": {
              "Name": "dbserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037173a3cc15f80ff"
            ]
          },
          "dependencies": [
            "aws_security_group.privateSG",
            "aws_subnet.privateSubnet",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c38b837cd80f13bb",
            "arn": "arn:aws:ec2:eu-west-1:533267206237:instance/i-07315c059fb957f4b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07315c059fb957f4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kc-terraform-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03367ce0643fc9c8b",
            "private_dns": "ip-10-0-1-140.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.140",
            "public_ip": "3.251.74.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03a4c3a4c82685a2b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b05fff72934c5183",
            "tags": {
              "Name": "webserver"
            },
            "tags_all": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0116686d9d5caeea3"
            ]
          },
          "dependencies": [
            "aws_security_group.publicSG",
            "aws_subnet.publicSubnet",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:internet-gateway/igw-0e8071f46000e8263",
            "id": "igw-0e8071f46000e8263",
            "owner_id": "533267206237",
            "tags": {
              "Name": "kc-igw"
            },
            "tags_all": {
              "Name": "kc-igw"
            },
            "vpc_id": "vpc-03cd6e85b66780a93"
          },
          "dependencies": [
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "kc-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5b2bab85b1d59d8",
            "association_id": "eipassoc-045aab137bc9f5822",
            "connectivity_type": "public",
            "id": "nat-0d439eeb9459e8702",
            "network_interface_id": "eni-00f4362a1aed15c25",
            "private_ip": "10.0.1.84",
            "public_ip": "54.217.178.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b05fff72934c5183",
            "tags": {
              "Name": "kc-nat-gateway"
            },
            "tags_all": {
              "Name": "kc-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.kc-eip",
            "aws_subnet.publicSubnet",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:network-acl/acl-094a0e9e9d441d059",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-094a0e9e9d441d059",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 4,
                "to_port": 0
              }
            ],
            "owner_id": "533267206237",
            "subnet_ids": [],
            "tags": {
              "Name": "private_nacl"
            },
            "tags_all": {
              "Name": "private_nacl"
            },
            "vpc_id": "vpc-03cd6e85b66780a93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:network-acl/acl-0479a0801e65d786c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0479a0801e65d786c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 7,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 6,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 5,
                "to_port": 80
              }
            ],
            "owner_id": "533267206237",
            "subnet_ids": [
              "subnet-08e28b81eb8effb5e"
            ],
            "tags": {
              "Name": "public_nacl"
            },
            "tags_all": {
              "Name": "public_nacl"
            },
            "vpc_id": "vpc-03cd6e85b66780a93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-012c050e961ff0faa",
            "network_acl_id": "acl-094a0e9e9d441d059",
            "subnet_id": "subnet-007a43b1c99fcf62d"
          },
          "dependencies": [
            "aws_network_acl.private_nacl",
            "aws_subnet.privateSubnet",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-09967921aea337506",
            "network_acl_id": "acl-0479a0801e65d786c",
            "subnet_id": "subnet-0b05fff72934c5183"
          },
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_subnet.publicSubnet",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:route-table/rtb-04295214aed4be18d",
            "id": "rtb-04295214aed4be18d",
            "owner_id": "533267206237",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d439eeb9459e8702",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cd6e85b66780a93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.kc-eip",
            "aws_nat_gateway.kc-nat-gateway",
            "aws_subnet.publicSubnet",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:route-table/rtb-099fd957b6dfbb884",
            "id": "rtb-099fd957b6dfbb884",
            "owner_id": "533267206237",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8071f46000e8263",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cd6e85b66780a93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kc-igw",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058315b5ae880f534",
            "route_table_id": "rtb-04295214aed4be18d",
            "subnet_id": "subnet-007a43b1c99fcf62d"
          },
          "dependencies": [
            "aws_eip.kc-eip",
            "aws_nat_gateway.kc-nat-gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.privateSubnet",
            "aws_subnet.publicSubnet",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ae4bab0729bf375",
            "route_table_id": "rtb-099fd957b6dfbb884",
            "subnet_id": "subnet-0b05fff72934c5183"
          },
          "dependencies": [
            "aws_internet_gateway.kc-igw",
            "aws_route_table.public_route_table",
            "aws_subnet.publicSubnet",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privateSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:security-group/sg-037173a3cc15f80ff",
            "description": "Allow all inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037173a3cc15f80ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow private traffic",
            "name_prefix": "",
            "owner_id": "533267206237",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "publicSG"
            },
            "tags_all": {
              "Name": "publicSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cd6e85b66780a93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:security-group/sg-0116686d9d5caeea3",
            "description": "Allow all inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0116686d9d5caeea3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "105.112.123.53/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow traffic",
            "name_prefix": "",
            "owner_id": "533267206237",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "publicSG"
            },
            "tags_all": {
              "Name": "publicSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cd6e85b66780a93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:subnet/subnet-007a43b1c99fcf62d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007a43b1c99fcf62d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267206237",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "private",
              "Name": "privateSubnet"
            },
            "tags_all": {
              "Env": "private",
              "Name": "privateSubnet"
            },
            "vpc_id": "vpc-03cd6e85b66780a93"
          },
          "dependencies": [
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:subnet/subnet-0b05fff72934c5183",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b05fff72934c5183",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267206237",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Public",
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Env": "Public",
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-03cd6e85b66780a93"
          },
          "dependencies": [
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kc-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:vpc/vpc-03cd6e85b66780a93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ded737434ed47d9",
            "default_route_table_id": "rtb-0e4124ba3506440c7",
            "default_security_group_id": "sg-0d798ea82b5023a0d",
            "dhcp_options_id": "dopt-093343210cb22ce2b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03cd6e85b66780a93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e4124ba3506440c7",
            "owner_id": "533267206237",
            "tags": {
              "Name": "kc-vpc"
            },
            "tags_all": {
              "Name": "kc-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:security-group-rule/sgr-0576dd57a3a1743f5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0576dd57a3a1743f5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-037173a3cc15f80ff",
            "security_group_rule_id": "sgr-0576dd57a3a1743f5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.privateSG",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:security-group-rule/sgr-022f90bd6882e3c1b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-022f90bd6882e3c1b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0116686d9d5caeea3",
            "security_group_rule_id": "sgr-022f90bd6882e3c1b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.publicSG",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:security-group-rule/sgr-044e212a480f20e0d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-044e212a480f20e0d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0116686d9d5caeea3",
            "security_group_rule_id": "sgr-044e212a480f20e0d",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.publicSG",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:security-group-rule/sgr-0626e411eaf3bb6e3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0626e411eaf3bb6e3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0116686d9d5caeea3",
            "security_group_rule_id": "sgr-0626e411eaf3bb6e3",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.publicSG",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_postgresql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:security-group-rule/sgr-06f3e65f05231fe8a",
            "cidr_ipv4": "10.0.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-06f3e65f05231fe8a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-037173a3cc15f80ff",
            "security_group_rule_id": "sgr-06f3e65f05231fe8a",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.privateSG",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267206237:security-group-rule/sgr-0d9965e9a362fd3a4",
            "cidr_ipv4": "105.112.123.53/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d9965e9a362fd3a4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0116686d9d5caeea3",
            "security_group_rule_id": "sgr-0d9965e9a362fd3a4",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.publicSG",
            "aws_vpc.kc-vpc"
          ]
        }
      ]
    }
  ]
}